# cargo-smith

./: CHANGELOG.md  Cargo.toml  README.MD
src/: lib.rs  main.rs  utils.rs
src/commands/: controller.rs  module.rs  new.rs  resource.rs  service.rs
src/templates/: cargo_mold.tpl  cargo_smith.tpl  cargo_toml.tpl  env_example.tpl  mod.rs  template_engine.rs  types.rs
src/templates/new/: mod.rs
src/templates/new/nestjs/: app_controller_rs.tpl  app_module_rs.tpl  app_service_rs.tpl  controller_rs.tpl  lib_rs.tpl  main_rs.tpl  mod.rs  module_rs.tpl  server_rs.tpl  server_server_rs.tpl  service_rs.tpl
src/templates/new/nestjs/mod_files/: app_mod_rs.tpl  common_mod_rs.tpl  config_mod_rs.tpl  modules_mod_rs.tpl  server_mod_rs.tpl
src/templates/new/traditional/: handlers_handlers_rs.tpl  lib_rs.tpl  mod.rs  routes_routes_rs.tpl  server_server_rs.tpl
src/templates/new/traditional/mod_files/: handlers_mod_rs.tpl  models_mod_rs.tpl  routes_mod_rs.tpl  utils_mod_rs.tpl
src/templates/resource/traditional/: handler_rs.tpl  model_rs.tpl  routes_rs.tpl
src/utils/: funcs.rs  mod.rs
