[package]
name = "cargo-smith"
version = "0.3.0"
edition = "2024"
description = "NestJS-inspired code generator for Rust web applications"
license = "MIT"
authors = ["Pedro Herrera"]
repository = "https://github.com/Hero472/cargo-smith"
readme = "README.md"
keywords = ["actix", "web", "scaffolding", "cli", "generator"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
exclude = [
    ".env",
    ".env.*",
    "*.key",
    "secrets/",
    "config/local.toml",
]
include = [
    "src/**/*",
    "templates/**/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "cargo-smith"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
bcrypt = "0.17.0"
chrono = "0.4.42"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
sha2 = "0.10.9"
aes-gcm = "0.10"
hex = "0.4.3"
actix-web = "4.11.0"
actix-service = "2.0"
futures = "0.3"
async-trait = "0.1.89"
toml = "0.9.7"
dialoguer = "0.12.0"
